increased padding on mobile nav items

--- a/css/style.css
+++ b/css/style.css
@@ -64,12 +64,12 @@ body {
     position: absolute;
     align-items: flex-end;
     width: 100%;
-    top: -160px;
+    top: -200px;
     background-color: rgba(173, 216, 230, 0.555);
 }
 
 .menu-closed {
-    top: -160px;
+    top: -200px;
 }
 
 .menu-open {
@@ -88,7 +88,7 @@ p, .nav-link, .form-field, .button {
 .nav-link {
     text-decoration: none;
     color: white;
-    padding: 0 20px 0 20px;
+    padding: 9px;
     align-items: center;
     font-size: 20px;
 }
