--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,10 @@ footer {
         display: flex;
     }
 
+    .nav-link {
+        padding: 0 20px 0 20px;
+    }
+
     .nav-mobile {
         display: none;
     }
