updated media query so that hero span is visible sooner and card deck unsets later

--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,11 @@ footer {
     }
 }
 
+@media only screen and (min-width: 750px) {
+     .card-deck {
+        flex-direction: unset;
+    }
+
     #hero-text {
         display: block;
     }
